--- a/news.html
+++ b/news.html
@@ -13,7 +13,7 @@
             <ul class="ulbar">
                 <li><a href="index.html">Home</a></li>
                 <li><a href="news.html">News</a></li>
-                <button class="signupbutton"><a class="signup" href="#">Sign Up</a></button>
+                <button class="signupbutton"><a class="signup" href="sign.html">Sign Up</a></button>
             </ul>
         </div>
     </nav>
